import 'package:flutter/cupertino.dart';
import 'package:flutter/material.dart';
import 'package:flutter_riverpod/flutter_riverpod.dart';
import 'package:gap/gap.dart';
import 'package:intl/intl.dart';
import 'package:rentbike/constants/app_style.dart';
import 'package:rentbike/model/rent_model.dart';
import 'package:rentbike/provider/date_time_provider.dart';
import 'package:rentbike/provider/radio_provider.dart';
import 'package:rentbike/provider/service_provider.dart';
import 'package:rentbike/widget/date_time_widget.dart';
import 'package:rentbike/widget/radio_widget.dart';
import 'package:rentbike/widget/textfield_widget.dart';

class AddNewRentModel extends ConsumerWidget {
  AddNewRentModel({
    super.key,
  });

  //nama penyewa
  final nameController = TextEditingController();
  //deksripsi
  final descriptionController = TextEditingController();

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final dateProv = ref.watch(dateProvider);
    return Container(
      padding: const EdgeInsets.all(30),
      height: MediaQuery.of(context).size.height * 0.90,
      decoration: BoxDecoration(
        color: Colors.white,
        borderRadius: BorderRadius.circular(16),
      ),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          SizedBox(
              width: double.infinity,
              child: Text(
                'New Rent',
                textAlign: TextAlign.center,
                style: TextStyle(
                    fontSize: 22,
                    fontWeight: FontWeight.bold,
                    color: Colors.black),
              )),
          Divider(
            thickness: 1.2,
            color: Colors.grey.shade200,
          ),
          const Gap(6),
          const Text(
            'Nama Penyewa',
            style: AppStyle.headingOne,
          ),
          const Gap(6),
          TextFieldWidget(
            maxLine: 1,
            hintText: 'Masukkan Nama Penyewa',
            txtController: nameController,
          ),
          const Gap(12),
          const Text('Data Peminjaman', style: AppStyle.headingOne),
          const Gap(6),
          TextFieldWidget(
            maxLine: 5,
            hintText: 'Masukkan Data',
            txtController: descriptionController,
          ),
          const Gap(12),
          const Text('Kategori', style: AppStyle.headingOne),
          Row(
            children: [
              Expanded(
                child: RadioWidget(
                  categColor: Colors.green,
                  titleRadio: 'Pinjam',
                  valueInput: 1,
                  onChangeValue: () =>
                      ref.read(radioProvider.notifier).update((state) => 1),
                ),
              ),
              Expanded(
                child: RadioWidget(
                  categColor: Colors.blue.shade700,
                  titleRadio: 'Keliling',
                  valueInput: 2,
                  onChangeValue: () =>
                      ref.read(radioProvider.notifier).update((state) => 2),
                ),
              ),
              Expanded(
                child: RadioWidget(
                  categColor: Colors.amberAccent.shade700,
                  titleRadio: 'Foto',
                  valueInput: 3,
                  onChangeValue: () =>
                      ref.read(radioProvider.notifier).update((state) => 3),
                ),
              ),
            ],
          ),
          const Gap(12),
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [
              //untuk menampilkan tampilan tanggal
              DateTimeWidget(
                titleText: 'Tanggal',
                valueText: dateProv,
                iconSection: CupertinoIcons.calendar,
                onTap: () async {
                  final getValue = await showDatePicker(
                      context: context,
                      initialDate: DateTime.now(),
                      firstDate: DateTime(2021),
                      lastDate: DateTime(2025));

                  if (getValue != null) {
                    final format = DateFormat.yMd();
                    ref
                        .read(dateProvider.notifier)
                        .update((state) => format.format(getValue));
                    print(format.format(getValue));
                  }
                },
              ),
              const Gap(12),
              //untuk menampilkan tampilan jam
              DateTimeWidget(
                titleText: 'Jam',
                valueText: ref.watch(timeProvider),
                iconSection: CupertinoIcons.clock,
                onTap: () async {
                  final getTime = await showTimePicker(
                    context: context,
                    initialTime: TimeOfDay.now(),
                  );

                  if (getTime != null) {
                    ref
                        .read(timeProvider.notifier)
                        .update((state) => getTime.format(context));
                  }
                },
              ),
            ],
          ),

          // Button Section Cancel dan Save
          const Gap(20),
          Row(
            children: [
              Expanded(
                child: ElevatedButton(
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.white,
                    foregroundColor: Colors.blue.shade800,
                    elevation: 0,
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(8),
                    ),
                    side: BorderSide(
                      color: Colors.blue.shade800,
                    ),
                    padding: const EdgeInsets.symmetric(vertical: 14),
                  ),
                  onPressed: () => Navigator.pop(context),
                  child: const Text('Batal'),
                ),
              ),
              const Gap(20),
              Expanded(
                child: ElevatedButton(
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.blue.shade800,
                    foregroundColor: Colors.white,
                    elevation: 0,
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(8),
                    ),
                    padding: const EdgeInsets.symmetric(vertical: 14),
                  ),
                  //inisiasi radio button pada button save
                  onPressed: () {
                    final getRadioValue = ref.read(radioProvider);
                    String category = '';

                    switch (getRadioValue) {
                      case 1:
                        category = 'Pinjam';
                        break;
                      case 2:
                        category = 'Keliling';
                        break;
                      case 3:
                        category = 'Foto';
                        break;
                    }

                    ref.read(serviceProvider).addNewRent(RentModel(
                          nameRent: nameController.text,
                          description: descriptionController.text,
                          category: category,
                          dateRent: ref.read(dateProvider),
                          timeRent: ref.read(timeProvider),
                          isDone: false,
                        ));

                    print('Data berhasil disimpan');

                    nameController.clear();
                    descriptionController.clear();
                    ref.read(radioProvider.notifier).update((state) => 0);
                    Navigator.pop(context);
                  },
                  child: const Text('Simpan'),
                ),
              ),
            ],
          )
        ],
      ),
    );
  }
}
